Mon Jun 19 22:17:01 2000  George Lebl <jirka@5z.com>

	* gnome-dock-item.[ch]: add a hidden state, add a signal
	  "dock_toggle_state", write and use wrappers for all the signals.
	  Actually emit the detach signal.  When a user clicks on the handle
	  hide the dock item

	* gnome-dock.c: catch the dock_toggle_state and emit layout changed
	  signal

	* gnome-dock-layout.[ch]: load and save the hidden state

2000-06-15  Jody Goldberg <jgoldberg@home.com>

	* gnome-calculator.c (set_result) : setlocale returns a static buffer.
	  Copy it to safety.  Set the locale AFTER storing the current
	  setting.
	(add_digit) : Ditto.
	(negate_val) : Ditto.

Mon Jun 12 16:57:50 2000  George Lebl <jirka@5z.com>

	* gnome-dialog-util.c: fix a memory leak.  Free the info structure
	  by using the destroy notify of the signal connection rather then
	  in the clicked handler as that is not always called (like when
	  the dialog is closed by the wm)

Thu Jun 01 02:47:22 2000  George Lebl <jirka@5z.com>

	* gnome-color-picker.[ch]: add accessors for attributes, and add
	  GtkArg stuff

2000-05-31  Jon K Hellan  <hellan@acm.org>

	* gnome-messagebox.c (gnome_message_box_construct,
	gnome_message_box_new): Set keyboard focus to default button.

2000-05-27  Julian Missig  <julian@linuxpower.org>

	* gnome-paper-selector.h: SELECTOR, not SELECTER.

2000-05-26  Ian Peters  <itp@gnu.org>

	* gnome-app.h: uncommented GNOME_APP_CLASS and GNOME_IS_APP_CLASS --
	they should be there

Sat May 27 11:42:02 2000  George Lebl <jirka@5z.com>

	* gnome-href.c: Allow draging the link off the button

Sat May 27 01:13:20 2000  George Lebl <jirka@5z.com>

	* dock_demo.c, gnome-file-saver.c, gnome-helpsys.c
	  gnome-mdi-child.h, gnome-mdi-generic-child.c, gnome-preferences.[ch],
	  gnome-roo.c, gnome_segv.c, mdi_demo.c, oafgnome.c,
	  test-recently-used.c:  Fix warnings.

	* gnome-animator.c:  Fix warnings.  Fix an unitialized value problem.

	* gnome-color-picker.c: Add drag and drop for colors.
