@@ -70,8 +70,6 @@ struct _GnomeDockLayoutItem
     } docked;
 
   } position;
-
-  guint is_hidden:1;
 };
 
 struct _GnomeDockLayout
